# facloud_div

./: .gitignore  README.md  agent.md  desktop.ini  embedding.md  interview.md  lang.md  pyproject.toml
alembic/: README  env.py
alembic/versions/: 20a237b88dda_exchange.py  4afe3d9debf6_baseline.py  61335850cc58_baseline.py  8d6df10a654f_exchange.py  90dcdca1c14e_initial_schema.py  a67cbb130566_exchange.py  afd5547d26ca_update_base.py  c9e993a1e138_update_base.py
app/: config.py  mainapp.py
app/agent/: ag_core.py  ag_decision_schema.py  ag_service.py  age_brain.py  age_executor copy.py  age_executor.py  age_tools.py
app/api/: __init__.py  r_div_agent.py  r_div_az_cognitive.py  r_div_data_lake.py  r_div_embedding.py  r_div_inject.py  r_div_rag.py  r_div_rag_contract.py  r_div_show.py  r_finance_api.py  r_lc.py  r_reserve.py
app/core/: ai_logging copy.py  azure_data_lake_log.py  azure_openai.py  azure_openai_chat.py  rag_middleware.py
app/db/: db_async.py  db_sync.py  pg_conn.py
app/lc/: lc_agent.py  lc_agent_service copy.py  lc_agent_service.py  lc_tools.py  static_model.py
app/pipelines/: pip_div_inject.py
app/providers/: az-search.py  finnhub_client.py
app/service/: delete_ser_div_inject.py  ser_ai_agent.py  ser_ai_rag.py  ser_div_az_search.py  ser_div_chunk.py  ser_div_embedding.py  ser_div_inject.py  ser_div_load.py  ser_div_nasdaq2df.py  ser_div_pg.py  ser_div_pg_load2pg.py  ser_div_pgvector2azure.py  ser_div_pipeline.py  ser_div_rag.py  ser_dividend_finnhub.py  ser_dividend_grab_nasdaq.py  ser_dividend_load.py  (+2 more)
tests/: test_agent_brain.py
(+25 files in other folders)
