[project]
name = "fastapicloud-dividend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "openai>=2.16.0",
    "pandas>=3.0.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.46",
]
