[project]
name = "fastapicloud-dividend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "azure-search-documents[aio]>=11.6.0",
    "azure-storage-file-datalake>=12.23.0",
    "fastapi[standard]>=0.128.0",
    "langchain>=1.2.8",
    "langchain-azure-ai>=1.0.0",
    "langchain-openai>=1.1.7",
    "openai>=2.16.0",
    "pandas>=3.0.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.46",
    "tavily>=1.1.0",
    "tenacity>=9.1.2",
]
